src/objects/informaticatestobject__c.object
<CustomObject>
    <description>Informatica test objects</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>informaticatestobject</relationshipLabel>
        <relationshipName>informaticatestobject</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_birth__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Service_Types__c</fullName>
        <label>Service Types</label>
        <picklist>
            <picklistValues>
                <fullName>Audio Visual Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;B Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Logistic Need Provider</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Simple_text__c</fullName>
        <label>Simple text</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>on_off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>on/off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>parentInformaticatestObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>informaticatestobject</label>
        <referenceTo>informaticatestobject__c</referenceTo>
        <relationshipLabel>informaticatestobject</relationshipLabel>
        <relationshipName>informaticatestobject</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>informaticatestobject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>informaticatestobject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>informaticatestobject</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>